@@ -47,6 +47,9 @@
 
 "attributes": {
 	"enabled": true,
+	"stats_conns": ["*localhost"],
+	"resources_conns": ["*localhost"],
+	"apiers_conns": ["*localhost"]
 },
 
 
